2004-01-26  Jorn Baayen  <jorn@nl.linux.org>

	* src/PlaylistWindow.cs:

	Don't watch foo/bar/ if foo/ is already being watched.

2004-01-26  Jorn Baayen  <jorn@nl.linux.org>

	* src/CoverDatabase.cs:

	Set KeepAlive to false when fetching cover images.

2004-01-25  Jorn Baayen  <jorn@nl.linux.org>

	* src/SongDatabase.cs:

	Async fixes.

2004-01-25  Jorn Baayen  <jorn@nl.linux.org>

	* src/CoverDatabase.cs:

	Close stream after creating a pixbuf from it.

2004-01-25  Lee Willis  <lee@leewillis.co.uk>

	* src/CoverDatabase.cs:

	Fix SanitizeString.

2004-01-25  Jorn Baayen  <jorn@nl.linux.org>

	* src/Album.cs:

	Fix sorting.

2004-01-25  Jorn Baayen  <jorn@nl.linux.org>

	* libmuine/pointer-list-view.c: (pointer_list_view_changed):
	* src/AddAlbumWindow.cs:
	* src/AddSongWindow.cs:

	Better change handling.

2004-01-25  Jorn Baayen  <jorn@nl.linux.org>

	* src/AddAlbumWindow.cs:
	* src/AddSongWindow.cs:

	Ensure we keep a selection when possible.

2004-01-25  Jorn Baayen  <jorn@nl.linux.org>

	* src/Album.cs:
	* src/Song.cs:

	Fix album covers only showing up for the first song.
	
	* AUTHORS:
	
	Added Lee.

2004-01-25  Jorn Baayen  <jorn@nl.linux.org>

	* libmuine/db.c: (db_unpack_bool), (db_pack_bool):
	* libmuine/db.h:
	* src/AddAlbumWindow.cs:
	* src/AddSongWindow.cs:
	* src/Album.cs:
	* src/Song.cs:
	* src/SongDatabase.cs:

	Fully asynchronous cover image fetching.

	Again, the DB format has changed..

2004-01-25  Jorn Baayen  <jorn@nl.linux.org>

	* libmuine/db.c: (db_store):
	* libmuine/pointer-list-view.c: (pointer_list_view_changed):
	* libmuine/pointer-list-view.h:
	* src/CoverDatabase.cs:
	* src/HandleView.cs:
	* src/PlaylistWindow.cs:
	* src/Song.cs:
	* src/SongDatabase.cs:

	File existance/change/removal checking on startup works. And async ;)

2004-01-25  Jorn Baayen  <jorn@nl.linux.org>

	* src/PlaylistWindow.cs:

	Check that we have no watched folders instead of an empty lib.

2004-01-25  Jorn Baayen  <jorn@nl.linux.org>

	* TODO: